--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/jest": "^29.5.2",
     "@types/jquery": "^3.5.20",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/multer": "^1.4.8",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.10",
     "@types/passport-local": "^1.0.36",
